fix: align title-logos to back finances

--- a/public/modules/finances/css/new-finances.css
+++ b/public/modules/finances/css/new-finances.css
@@ -664,6 +664,4 @@ select, .select-pad {
 .page-title svg {
     width: auto;
     height: 20px;
-    margin-left: 10px;
-    margin-top: 5px;
 }
